[package]
name = "pietcc"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piet-parser = { version = "0.1", path = "parser" }
cfg_to_ir = { version = "0.1", path = "compiler/cfg_to_ir" }
piet-optimizer = { version = "0.1", path = "compiler/optimizer" }
piet-interpreter = { version = "0.1", path = "interpreter" }
piet-core = { version = "0.1", path = "piet_core" }
inkwell = { version = "0.7.0", features = ["llvm18-1"] }
image = "0.24.5"
clap = "3.0.0-beta.5"

[build-dependencies]
toml = "0.8.14"

[dev-dependencies]
# Add common test dependencies here if needed
tempfile = "3.8"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[profile.test]
# Optimize test builds for faster execution
opt-level = 1

[profile.dev]
# Faster compile times during development
opt-level = 0
