[package]
name = "piet-compiler"
version = "0.1.0"
edition = "2021"

[lib]
name = "compiler"
path = "src/lib.rs"

[dependencies]
image = "0.24.5"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
piet-types = { version = "0.1", path = "../types" }
piet-parser = { version = "0.1", path = "../parser" }