workspace = { members = ["cfg_to_ir", "codegen", "optimizations"] }
[package]
name = "piet-compiler"
version = "0.1.0"
edition = "2021"

[lib]
name = "compiler"
path = "src/lib.rs"

[dependencies]
image = "0.24.5"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }
piet-types = { version = "0.1", path = "../types" }
piet-parser = { version = "0.1", path = "../parser" }
piet-interpreter = { version = "0.1", path = "../interpreter" }
strum = "0.24.1"
strum_macros = "0.24"
cfg_to_ir = { version = "0.1", path = "cfg_to_ir" }