[package]
name = "piet-compiler"
version = "0.1.0"
edition = "2021"

[lib]
name = "compiler"
path = "src/lib.rs"

[dependencies]
image = "0.24.5"
inkwell = { version = "0.4.0", features = ["llvm16-0"] }
piet-types = { version = "0.1", path = "../types" }
piet-parser = { version = "0.1", path = "../parser" }
strum = "0.24.1"
strum_macros = "0.24"