[package]
name = "cfg_to_ir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }
piet-types = { version = "0.1", path = "../../types" }
piet-parser = { version = "0.1", path = "../../parser" }
strum = "0.24.1"
strum_macros = "0.24"