[package]
name = "cfg_to_ir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
inkwell = { version = "0.4.0", features = ["llvm16-0"] }
piet-types = { version = "0.1", path = "../../types" }
piet-parser = { version = "0.1", path = "../../parser" }
piet-interpreter = { version = "0.1", path = "../../interpreter" }
strum = "0.24.1"
strum_macros = "0.24"