[package]
name = "cfg_to_ir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
inkwell = { version = "0.7.0", features = ["llvm18-1"] }
piet-core = { version = "0.1", path = "../../piet_core" }
piet-parser = { version = "0.1", path = "../../parser" }
piet-interpreter = { version = "0.1", path = "../../interpreter" }
piet-optimizer = { version = "0.1", path = "../optimizer" }
strum = "0.24.1"
strum_macros = "0.24"
